welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:7: error: ';' expected but 'else' found.
    else compteur += 1
    ^